# velocity_manager

./: CMakeLists.txt
include/target_estimator/: target_estimator.h
include/utils/: math.h
include/velocity_manager/: velocity_manager.h  velocity_manager_class.h
src/target_estimator/: target_estimator.cpp
src/velocity_manager/: velocity_manager.cpp  velocity_manager_class.cpp
tests/: target_estimator.cpp  velocity_manager.cpp
utils/: math.cpp
